<resources>
    <string name="app_name">DarQ Reborn</string>
    <string name="xposed_desc">Prevent apps from disabling the use of Force Dark</string>
    <string name="item_switch_main_title">Enable DarQ</string>
    <string name="item_switch_main_subtitle">DarQ only works while the system is in dark mode</string>
    <string name="item_switch_main_subtitle_off">DarQ requires the system dark mode be enabled to work</string>
    <string name="item_whitelist_title">DarQ Per-App Force Dark</string>
    <string name="item_whitelist_content">Select individual apps to force dark mode on</string>
    <string name="item_header_options">Options</string>
    <string name="item_oxygen_force_title">Oxygen OS Force Dark</string>
    <string name="item_oxygen_force_content">Enable the Oxygen OS \"Entire World\" force dark (applies to most apps)</string>
    <string name="item_day_night_auto_title">Auto Dark Theme</string>
    <string name="item_day_night_auto_content">Schedule dark theme automatically</string>
    <string name="item_advanced_options_title">Advanced Options</string>
    <string name="item_advanced_options_content">Change settings for always using force dark and app switching</string>
    <string name="item_always_use_force_dark_title">Always use Force Dark</string>
    <string name="item_always_use_force_dark_content">Ignore the list of Force Dark apps and instead have Force Dark <b>always enabled</b>, for all apps.</string>
    <string name="item_send_app_closes_title">Listen for App Closes</string>
    <string name="item_send_app_closes_content">Disables Force Dark when an app in the Force Dark list is closed. This leads to more instances where Force Dark may not be applied quickly enough to an app when switching between apps.</string>
    <string name="item_check_for_updates_title">Check for updates on launch</string>
    <string name="item_check_for_updates_content">Automatically check for new releases when opening the app and prompt to install them directly.</string>
    <string name="item_auto_dark_options_title">Auto Dark Options</string>
    <string name="item_auto_dark_header_master">Auto Dark Schedule</string>
    <string name="item_auto_dark_master_title">Enable Auto Dark Schedule</string>
    <string name="item_auto_dark_master_content">Automatically trigger dark theme according to schedule</string>
    <string name="item_auto_dark_header_mode">Schedule Mode</string>
    <string name="item_auto_dark_mode_sun_title">Sunset to Sunrise</string>
    <string name="item_auto_dark_mode_sun_content">Turn on dark mode at sunset and off at sunrise</string>
    <string name="item_auto_dark_mode_custom_title">Custom Time Schedule</string>
    <string name="item_auto_dark_mode_custom_content">Turn on dark mode according to custom start and end times</string>
    <string name="item_auto_dark_header_sunset_options">Sunset &amp; Sunrise Options</string>
    <string name="item_auto_dark_header_custom_options">Custom Time Options</string>
    <string name="item_auto_dark_header_target">Schedule Target</string>
    <string name="item_auto_dark_target_system_title">System &amp; DarQ Dark Mode</string>
    <string name="item_auto_dark_target_system_content">Automatically toggle both Android System Dark Mode and DarQ Force Dark together on schedule</string>
    <string name="item_auto_dark_target_darq_title">DarQ Force Dark Only</string>
    <string name="item_auto_dark_target_darq_content">Toggle DarQ per-app force dark on schedule without changing System Dark Mode</string>
    <string name="item_auto_dark_start_time_title">Start Time (Dark Mode ON)</string>
    <string name="item_auto_dark_end_time_title">End Time (Dark Mode OFF)</string>
    <string name="item_use_location_title">Use GPS Location</string>
    <string name="item_use_location_content">Use exact GPS location for sunset &amp; sunrise calculation</string>
    <string name="dialog_select_time">Select Time</string>
    <string name="item_advanced_group_service_title">Service &amp; Integration</string>
    <string name="item_advanced_group_updates_title">Updates</string>
    <string name="item_advanced_group_theme_title">Theme Options</string>
    <string name="item_advanced_group_behaviour_title">App Behaviour</string>
    <string name="item_persistent_service_title">Keep service running in background</string>
    <string name="item_persistent_service_content">Runs a low-priority foreground service to prevent the OS from killing DarQ and Shizuku. Highly recommended for OxygenOS, ColorOS, and HyperOS.</string>
    <string name="item_persistent_notification_settings_title">Manage Notification</string>
    <string name="item_persistent_notification_settings_content">Tap to minimize or hide the persistent background service notification in system settings.</string>
    <string name="persistent_foreground_service_notification_title">DarQ Background Service</string>
    <string name="persistent_foreground_service_notification_content">Monitoring foreground apps to apply dark mode.</string>
    <string name="item_header_about">About</string>
    <string name="item_about_faq_title">Frequently Asked Questions</string>
    <string name="item_about_title">DarQ Reborn v%1s</string>
    <string name="item_about_content">Developed &amp; Maintained by &lt;a href="https://github.com/Arora-Sir">&lt;b>&lt;u>Mohit Arora / Arora-Sir&lt;/u>&lt;/b>&lt;/a&gt;. <br/><br/>Source code is available on &lt;a href="https://github.com/Arora-Sir/DarQ-Reborn">&lt;b>&lt;u>GitHub&lt;/u>&lt;/b>&lt;/a&gt;.</string>
    <string name="item_developer_options_title">Developer Options</string>
    <string name="item_developer_options_monet_color_picker_title">Monet Color Picker</string>
    <string name="item_developer_options_monet_color_picker_content">Pick a color to use from your wallpaper</string>
    <string name="item_developer_options_kill_service_title">Kill duplicate services</string>
    <string name="item_developer_options_kill_service_content">Kill any duplicate DarQ services, this shouldn\'t be required due to how the service is handled, but may be if you switch between Shizuku and root modes.</string>
    <string name="item_developer_options_kill_service_toast_success">Success</string>
    <string name="item_developer_options_kill_service_toast_failed">Failed</string>
    <string name="item_developer_options_service_info">Service Info</string>
    <string name="item_developer_options_service_info_not_connected">Not Connected</string>
    <string name="item_developer_options_service_info_connected">Connected, service type: %1s</string>
    <string name="item_backup_restore_title">Backup &amp; Restore</string>
    <string name="item_backup_restore_content">Save and restore your DarQ config to device or the cloud</string>
    <string name="item_backup_restore_backup">Backup</string>
    <string name="item_backup_restore_backup_creating">Creating Backup…</string>
    <string name="item_backup_restore_backup_success">Backup created</string>
    <string name="item_backup_restore_backup_failed">Backup failed</string>
    <string name="item_backup_restore_restore_success">Restored successfully</string>
    <string name="item_backup_restore_restore_failed">Restore failed</string>
    <string name="item_backup_restore_restore_running">Restoring Backup…</string>
    <string name="item_backup_restore_restore">Restore</string>
    <string name="item_xposed_title">Xposed Module</string>
    <string name="item_xposed_content">Change settings of the DarQ Xposed module</string>
    <string name="item_xposed_aggressive_dark_title">Aggressive Force Dark</string>
    <string name="item_xposed_aggressive_dark_content">Override apps changing theme to a light style when in dark mode. This may cause color issues in some apps.</string>
    <string name="item_xposed_invert_status_bar_fix_title">Fix Status Bar Inversion</string>
    <string name="item_xposed_invert_status_bar_fix_content">Attempt to disable status bar inversion in force dark apps, fixing dark icons on dark background</string>
    <string name="item_xposed_info_title">Xposed Notes</string>
    <string name="item_xposed_info_content">If you are using EdXposed in app whitelist mode, or are using lsposed, you must also enable all the apps you want to apply to in your Xposed manager, as well as in DarQ.\nApps must be restarted after settings changes for them to apply.\nIf a setting or newly selected force dark app is not applying, try rebooting, launching DarQ then launching your selected app.\n<b>Warning:</b> If you uninstall Xposed or enable/disable DarQ\'s module, your DarQ settings may be reset due to Xposed\'s internal settings hooks. Use the backup/restore feature to save your settings before doing this.</string>
    <string name="color_picker_unavailable">Monet Color Picker unavailable for the currently selected wallpaper</string>
    <string name="loading_service_connect">Connecting to service…</string>
    <string name="snackbar_syncing_text">Syncing changes with service…</string>
    <string name="snackbar_syncing_complete_text">Changes synced with service.</string>
    <string name="snackbar_syncing_complete_app_enabled">%1$s enabled.</string>
    <string name="snackbar_syncing_complete_app_disabled">%1$s disabled.</string>
    <string name="snackbar_syncing_failed_text">Failed to sync changes. Changes will be applied on next restart.</string>
    <string name="snackbar_syncing_failed_button">More Info</string>
    <string name="loading_apps">Loading apps…</string>
    <string name="loading_apps_progress">Loading apps… (%1$d/%2$d)</string>
    <string name="search">Search</string>
    <string name="app_search_empty">Nothing found</string>
    <string name="menu_app_picker_show_non_launchable_apps">Show non-launchable apps\t</string>
    <string name="bottom_sheet_shizuku_not_running_title">Shizuku Not Running</string>
    <string name="bottom_sheet_shizuku_not_running_content">Shizuku is installed but the service has not been started. Open Shizuku and start the service via ADB to continue.</string>
    <string name="bottom_sheet_shizuku_not_running_positive">Launch Shizuku</string>
    <string name="bottom_sheet_shizuku_not_running_negative">Close</string>
    <string name="bottom_sheet_service_timeout_title">Service Timeout</string>
    <string name="bottom_sheet_service_timeout_content">Timed out starting/connecting to the DarQ service. Try rebooting your device.</string>
    <string name="bottom_sheet_service_timeout_positive">Close</string>
    <string name="bottom_sheet_shizuku_not_installed_title">Shizuku Not Installed</string>
    <string name="bottom_sheet_shizuku_not_installed_content">Shizuku is not installed and your device is not rooted (or you denied root permissions). Please install Shizuku to use DarQ without root.</string>
    <string name="donation_dialog_title">Buy me a coffee</string>
    <string name="donation_dialog_upi_title">Pay via UPI</string>
    <string name="donation_dialog_upi_summary">Pay using Google Pay, PhonePe, Paytm, BHIM, etc. (India)</string>
    <string name="donation_dialog_global_title">PayPal</string>
    <string name="donation_dialog_global_summary">Pay using global credit/debit cards or PayPal</string>
    <string name="social_links_dialog_title">Developer Profiles</string>
    <string name="social_website_title">Personal Website</string>
    <string name="social_website_summary">mohit-arora.me</string>
    <string name="social_github_profile_title">GitHub Profile</string>
    <string name="social_github_profile_summary">github.com/Arora-Sir</string>
    <string name="social_twitter_title">X (Twitter)</string>
    <string name="social_twitter_summary">x.com/arorasir</string>
    <string name="social_instagram_title">Instagram</string>
    <string name="social_instagram_summary">instagram.com/arora.sir</string>
    <string name="social_reddit_title">Reddit</string>
    <string name="social_reddit_summary">reddit.com/user/AroraSir</string>
</resources>