<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_gravity="bottom">

    <TextView
        android:id="@+id/social_links_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_16"
        android:paddingTop="@dimen/padding_8"
        android:paddingBottom="@dimen/padding_8"
        android:text="@string/social_links_dialog_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Darq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/social_links_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_16"
        app:layout_constrainedHeight="true"
        app:layout_constraintHeight_max="360dp"
        app:layout_constraintTop_toBottomOf="@id/social_links_title"
        app:layout_constraintBottom_toTopOf="@id/social_links_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/padding_16"
            android:paddingEnd="@dimen/padding_16">

            <!-- Website -->
            <LinearLayout
                android:id="@+id/social_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background_backup_restore"
                android:foreground="@drawable/rounded_ripple_36"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/padding_16"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/social_ic_website"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_website" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/social_website_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Darq"
                        android:textColor="?android:textColorPrimary"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/social_website_summary"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small.Darq"
                        android:textColor="?android:textColorSecondary" />
                </LinearLayout>

            </LinearLayout>

            <!-- GitHub Profile -->
            <LinearLayout
                android:id="@+id/social_github_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_8"
                android:background="@drawable/button_background_backup_restore"
                android:foreground="@drawable/rounded_ripple_36"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/padding_16"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/social_ic_github_profile"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_github" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/social_github_profile_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Darq"
                        android:textColor="?android:textColorPrimary"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/social_github_profile_summary"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small.Darq"
                        android:textColor="?android:textColorSecondary" />
                </LinearLayout>

            </LinearLayout>

            <!-- X (Twitter) -->
            <LinearLayout
                android:id="@+id/social_twitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_8"
                android:background="@drawable/button_background_backup_restore"
                android:foreground="@drawable/rounded_ripple_36"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/padding_16"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/social_ic_twitter"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_twitter" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/social_twitter_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Darq"
                        android:textColor="?android:textColorPrimary"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/social_twitter_summary"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small.Darq"
                        android:textColor="?android:textColorSecondary" />
                </LinearLayout>

            </LinearLayout>

            <!-- Instagram -->
            <LinearLayout
                android:id="@+id/social_instagram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_8"
                android:background="@drawable/button_background_backup_restore"
                android:foreground="@drawable/rounded_ripple_36"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/padding_16"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/social_ic_instagram"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_instagram" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/social_instagram_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Darq"
                        android:textColor="?android:textColorPrimary"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/social_instagram_summary"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small.Darq"
                        android:textColor="?android:textColorSecondary" />
                </LinearLayout>

            </LinearLayout>

            <!-- Reddit -->
            <LinearLayout
                android:id="@+id/social_reddit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_8"
                android:background="@drawable/button_background_backup_restore"
                android:foreground="@drawable/rounded_ripple_36"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/padding_16"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/social_ic_reddit"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_reddit" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/social_reddit_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Darq"
                        android:textColor="?android:textColorPrimary"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/social_reddit_summary"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small.Darq"
                        android:textColor="?android:textColorSecondary" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/social_links_cancel"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_8"
        android:layout_marginEnd="@dimen/padding_16"
        android:fontFamily="@font/google_sans_text_medium"
        android:text="@android:string/cancel"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/social_links_scroll" />

</androidx.constraintlayout.widget.ConstraintLayout>
